- CustomPolygon now excludes one node ways - Catch more IllegalArgumentExceptions (Data loss!!!)